@@ -123,7 +123,7 @@ void BuyArrow::prefDialog ()
   dialog->setHelpFile (helpFile);
   QColor color = selected->getColor();
   dialog->addColorItem(cl, pl, color);
-  dialog->addFloatItem(vl, pl, selected->getValue());
+  dialog->addDoubleItem(vl, pl, selected->getValue());
   dialog->addCheckItem(sd, pl, FALSE);
   
   int rc = dialog->exec();
@@ -132,7 +132,7 @@ void BuyArrow::prefDialog ()
   {
     color = dialog->getColor(cl);
     selected->setColor(color);
-    selected->setValue(dialog->getFloat(vl));
+    selected->setValue(dialog->getDouble(vl));
     
     selected->setSaveFlag(TRUE);
     
